--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="IAM ontwikkelt interactieve producten die kinderen en volwassenen stimuleren om te bewegen en cognitief te groeien. Onderwijs, sport en revalidatiezorg.">
     <link rel="icon" href="media/icon.png" type="image/png">
-    <link rel="stylesheet" href="styles.css?v=1.1">
+    <link rel="stylesheet" href="styles.css?v=1.2">
     <!-- HTMX via CDN -->
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <!-- Google Fonts: Inter -->
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+    <!-- Skip to main content link for accessibility -->
+    <a href="#main-content" class="skip-link">Ga naar inhoud</a>
 
     <!-- Global Background Canvas -->
     <div id="global-canvas-container">
@@ -111,11 +113,43 @@
                     </video>
                 </div>
                 <div class="hero-content">
-                    <h1 class="industrial-label" style="text-shadow: 2px 2px 0 #000;">INTER ACTIVE MOVE</h1>
-                    <p style="font-size: 1.5rem; margin-bottom: 2rem; text-shadow: 1px 1px 0 #000;">Interactieve
-                        oplossingen
-                        voor beweging, leren en spelen</p>
-                    <a href="#products" class="btn" style="border-radius: 999px;">Ontdek onze producten</a>
+                    <h1 class="industrial-label" style="text-shadow: 2px 2px 0 #000;">Breng Elke Ruimte tot Leven</h1>
+                    <p class="hero-subtitle">Interactieve projectiesystemen die leren, spelen en revalideren transformeren</p>
+                    <div class="hero-cta-group">
+                        <a href="#products" class="btn-primary">Bekijk Producten</a>
+                        <a href="#contact" class="btn-secondary">Gratis Adviesgesprek</a>
+                    </div>
+                </div>
+                <div class="scroll-indicator">
+                    <span>Scroll</span>
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/>
+                    </svg>
+                </div>
+            </section>
+
+            <!-- Trust Bar with Stats -->
+            <section class="trust-bar">
+                <div class="container">
+                    <p class="trust-label">Vertrouwd door scholen, zorginstellingen en speelparken in heel Nederland</p>
+                    <div class="stats-grid">
+                        <div class="stat-item">
+                            <span class="stat-number" data-target="500">500</span><span class="stat-suffix">+</span>
+                            <div class="stat-label">Installaties</div>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number" data-target="10">10</span><span class="stat-suffix">+</span>
+                            <div class="stat-label">Jaar Ervaring</div>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number" data-target="60">60</span><span class="stat-suffix">+</span>
+                            <div class="stat-label">Spellen Beschikbaar</div>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number" data-target="98">98</span><span class="stat-suffix">%</span>
+                            <div class="stat-label">Klanttevredenheid</div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -390,6 +424,92 @@
                 </div>
             </section>
 
+            <!-- Testimonials Section -->
+            <section class="testimonials-section section-opaque-light">
+                <div class="container">
+                    <h2 class="industrial-label">Wat Onze Klanten Zeggen</h2>
+                    <div class="testimonials-grid">
+                        <div class="testimonial-card">
+                            <div class="testimonial-stars">★★★★★</div>
+                            <div class="testimonial-content">
+                                De interactieve vloer heeft onze gymles volledig getransformeerd. Kinderen kunnen niet wachten om te bewegen en te leren. De betrokkenheid is enorm gestegen.
+                            </div>
+                            <div class="testimonial-author">
+                                <div class="testimonial-avatar">MV</div>
+                                <div class="testimonial-info">
+                                    <span class="testimonial-name">Maria de Vries</span>
+                                    <span class="testimonial-role">Directeur, Basisschool De Regenboog</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <div class="testimonial-stars">★★★★★</div>
+                            <div class="testimonial-content">
+                                Patiënten die eerst weerstand hadden tegen oefeningen, vragen nu zelf om meer sessies. De interactieve muur heeft onze therapie getransformeerd.
+                            </div>
+                            <div class="testimonial-author">
+                                <div class="testimonial-avatar">AJ</div>
+                                <div class="testimonial-info">
+                                    <span class="testimonial-name">Drs. Anna Jansen</span>
+                                    <span class="testimonial-role">Fysiotherapeut, Revalidatiecentrum Utrecht</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <div class="testimonial-stars">★★★★★</div>
+                            <div class="testimonial-content">
+                                De investering was binnen 2 jaar terugverdiend. Ouders vertellen vrienden over 'die gave vloer' en boeken feestjes juist voor deze attractie.
+                            </div>
+                            <div class="testimonial-author">
+                                <div class="testimonial-avatar">PG</div>
+                                <div class="testimonial-info">
+                                    <span class="testimonial-name">Peter de Groot</span>
+                                    <span class="testimonial-role">Eigenaar, Indoor Speelparadijs</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- How It Works Section -->
+            <section class="how-it-works section-opaque-light">
+                <div class="container">
+                    <h2 class="industrial-label">Van Eerste Contact tot Installatie</h2>
+                    <div class="steps-container">
+                        <div class="step-item">
+                            <div class="step-number">1</div>
+                            <div>
+                                <div class="step-title">Gratis Advies</div>
+                                <div class="step-desc">Bespreek uw wensen met onze experts</div>
+                            </div>
+                        </div>
+                        <div class="step-item">
+                            <div class="step-number">2</div>
+                            <div>
+                                <div class="step-title">Offerte op Maat</div>
+                                <div class="step-desc">Ontvang een passend voorstel</div>
+                            </div>
+                        </div>
+                        <div class="step-item">
+                            <div class="step-number">3</div>
+                            <div>
+                                <div class="step-title">Installatie</div>
+                                <div class="step-desc">Professionele montage door experts</div>
+                            </div>
+                        </div>
+                        <div class="step-item">
+                            <div class="step-number">4</div>
+                            <div>
+                                <div class="step-title">Training & Support</div>
+                                <div class="step-desc">Direct aan de slag met begeleiding</div>
+                            </div>
+                        </div>
+                    </div>
+                    <p style="text-align: center; margin-top: 2rem; color: var(--color-text-muted);">Gemiddelde levertijd: 4-6 weken</p>
+                </div>
+            </section>
+
             <!-- FAQ Accordion Section -->
             <section class="section section-opaque-dark">
                 <div class="container">
@@ -437,6 +557,46 @@
                                 kunt u ook eigen spellen maken.
                             </div>
                         </details>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Final CTA Section -->
+            <section class="final-cta-section">
+                <div class="container">
+                    <h2 class="industrial-label">Klaar om Uw Ruimte te Transformeren?</h2>
+                    <p class="subtitle">Plan een gratis adviesgesprek met onze experts</p>
+                    <div class="final-cta-buttons">
+                        <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20adviesgesprek%20inplannen." target="_blank" class="cta-whatsapp">
+                            <span class="cta-icon">💬</span>
+                            <span class="cta-text">
+                                <strong>Direct Contact via WhatsApp</strong>
+                                <small>Gemiddelde reactietijd: 15 minuten</small>
+                            </span>
+                        </a>
+                        <a href="tel:+31623998934" class="btn-secondary" style="color: #fff; border-color: rgba(255,255,255,0.5);">
+                            📞 Bel Direct
+                        </a>
+                    </div>
+                    <div class="final-cta-trust">
+                        <span>
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+                            </svg>
+                            Vrijblijvend
+                        </span>
+                        <span>
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+                            </svg>
+                            Reactie binnen 24 uur
+                        </span>
+                        <span>
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+                            </svg>
+                            Persoonlijk advies
+                        </span>
                     </div>
                 </div>
             </section>
@@ -527,6 +687,20 @@
         </footer>
     </div>
 
+    <!-- Mobile Sticky CTA -->
+    <div class="mobile-sticky-cta">
+        <div class="cta-content">
+            <div class="cta-text">
+                <strong>Interesse?</strong>
+                Vraag vrijblijvend advies
+            </div>
+            <div class="cta-buttons">
+                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie." target="_blank" class="btn-cta-primary">WhatsApp</a>
+                <a href="tel:+31623998934" class="btn-cta-secondary">📞</a>
+            </div>
+        </div>
+    </div>
+
     <script>
         // WhatsApp Integration
         function sendToWhatsapp(e) {
@@ -571,6 +745,72 @@
         }
     </script>
     <script src="projector.js"></script>
+    <script>
+        // Scroll-triggered animations using Intersection Observer
+        document.addEventListener('DOMContentLoaded', () => {
+            // Check if user prefers reduced motion
+            const prefersReducedMotion = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+
+            if (!prefersReducedMotion) {
+                const observerOptions = {
+                    threshold: 0.1,
+                    rootMargin: '0px 0px -50px 0px'
+                };
+
+                const observer = new IntersectionObserver((entries) => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting) {
+                            entry.target.classList.add('animate-in');
+                        }
+                    });
+                }, observerOptions);
+
+                // Add animation class to elements
+                const animateElements = document.querySelectorAll('.stat-item, .testimonial-card, .step-item, .pricing-card, .spec-card');
+                animateElements.forEach(el => {
+                    el.classList.add('animate-on-scroll');
+                    observer.observe(el);
+                });
+            }
+
+            // Animated number counter for stats
+            const statNumbers = document.querySelectorAll('.stat-number[data-target]');
+
+            const countObserver = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        const target = parseInt(entry.target.dataset.target);
+                        const duration = 2000;
+                        const startTime = performance.now();
+
+                        function updateCount(currentTime) {
+                            const elapsed = currentTime - startTime;
+                            const progress = Math.min(elapsed / duration, 1);
+
+                            // Easing function for smooth animation
+                            const easeOut = 1 - Math.pow(1 - progress, 3);
+                            const current = Math.floor(target * easeOut);
+
+                            entry.target.textContent = current;
+
+                            if (progress < 1) {
+                                requestAnimationFrame(updateCount);
+                            } else {
+                                entry.target.textContent = target;
+                            }
+                        }
+
+                        if (!prefersReducedMotion) {
+                            requestAnimationFrame(updateCount);
+                        }
+                        countObserver.unobserve(entry.target);
+                    }
+                });
+            }, { threshold: 0.5 });
+
+            statNumbers.forEach(stat => countObserver.observe(stat));
+        });
+    </script>
 </body>
 
 </html>
