--- a/products/interactieve-vloer.html
+++ b/products/interactieve-vloer.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <!-- Skip link for accessibility -->
+    <a href="#main-content" class="skip-link">Ga naar inhoud</a>
 
     <!-- Global Background Canvas -->
     <div id="global-canvas-container">
@@ -91,7 +93,16 @@
         <a href="../index.html#contact" onclick="closeMobileNav()">Contact</a>
     </div>
 
-    <main>
+    <main id="main-content">
+        <!-- Breadcrumb Navigation -->
+        <nav class="breadcrumb container" aria-label="Breadcrumb">
+            <ol>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../index.html#products">Producten</a></li>
+                <li aria-current="page">Interactieve Vloer</li>
+            </ol>
+        </nav>
+
         <!-- Product Hero with Image -->
         <section class="product-hero">
             <div class="container">
@@ -101,10 +112,15 @@
                         <p>Transformeer elke ruimte in een dynamische speelwereld. Onze geavanceerde
                             projectietechnologie reageert direct op beweging - ideaal voor scholen,
                             BSO's, zorginstellingen en evenementen.</p>
-                        <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Vloer."
-                            class="btn" style="background: var(--color-primary); color: #000; border-radius: 999px;">
-                            Offerte Aanvragen
-                        </a>
+                        <div class="hero-cta-group" style="justify-content: flex-start; margin-top: 1.5rem;">
+                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Vloer."
+                                class="btn-primary">
+                                Offerte Aanvragen
+                            </a>
+                            <a href="#video-demo" class="btn-tertiary" style="color: var(--color-text);">
+                                Bekijk Demo
+                            </a>
+                        </div>
                     </div>
                     <div class="product-hero-image">
                         <img src="../media/products/interactieve-vloer.png"
@@ -114,19 +130,133 @@
             </div>
         </section>
 
-        <!-- Product Description (OPAQUE LIGHT) -->
+        <!-- Video Demo Section -->
+        <section id="video-demo" class="video-demo-section section-opaque-light">
+            <div class="container">
+                <h2 class="industrial-label" style="text-align: center; margin-bottom: 2rem;">Zie Het In Actie</h2>
+                <div class="video-demo-container">
+                    <div class="video-placeholder" onclick="this.innerHTML='<iframe src=\'https://www.youtube.com/embed/VIDEO_ID?autoplay=1\' frameborder=\'0\' allow=\'autoplay; encrypted-media\' allowfullscreen style=\'position: absolute; top: 0; left: 0; width: 100%; height: 100%;\'></iframe>'">
+                        <img src="../media/products/interactieve-vloer.png" alt="Video thumbnail - Interactieve Vloer demo">
+                        <div class="video-play-button">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M8 5v14l11-7z"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <p class="video-caption">Bekijk hoe kinderen spelend leren met de Interactieve Vloer</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Use Cases Section -->
+        <section class="use-cases-section">
+            <div class="container">
+                <h2 class="industrial-label" style="text-align: center; margin-bottom: 2rem;">Perfect Voor</h2>
+                <div class="use-cases-grid">
+                    <div class="use-case-item">
+                        <div class="use-case-icon">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/>
+                            </svg>
+                        </div>
+                        <div class="use-case-title">Scholen & BSO</div>
+                        <div class="use-case-desc">Bewegend leren in de klas of gymzaal</div>
+                    </div>
+                    <div class="use-case-item">
+                        <div class="use-case-icon">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M19 3H5c-1.1 0-1.99.9-1.99 2L3 19c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-1 11h-4v4h-4v-4H6v-4h4V6h4v4h4v4z"/>
+                            </svg>
+                        </div>
+                        <div class="use-case-title">Zorginstellingen</div>
+                        <div class="use-case-desc">Therapie en activering voor ouderen</div>
+                    </div>
+                    <div class="use-case-item">
+                        <div class="use-case-icon">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"/>
+                            </svg>
+                        </div>
+                        <div class="use-case-title">Speelparken</div>
+                        <div class="use-case-desc">Extra attractie die bezoekers trekt</div>
+                    </div>
+                    <div class="use-case-item">
+                        <div class="use-case-icon">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1z"/>
+                            </svg>
+                        </div>
+                        <div class="use-case-title">Evenementen</div>
+                        <div class="use-case-desc">Eye-catcher op beurzen en festivals</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Product Testimonial -->
         <section class="section section-opaque-light">
             <div class="container">
-                <h2 class="industrial-label" style="text-align: center; margin-bottom: 2rem;">Wat is de Interactieve
-                    Vloer?</h2>
-                <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-                    <p style="font-size: 1.1rem; line-height: 1.8; color: var(--color-text-muted);">
-                        De Interactieve Vloer transformeert elke vloer tot een dynamische speelondergrond.
-                        Met geavanceerde projectietechnologie en bewegingssensoren reageert de vloer direct
-                        op elke stap, sprong of beweging. Ideaal voor scholen, BSO's, speelhallen,
-                        zorginstellingen en evenementen.
-                    </p>
+                <div class="product-testimonial">
+                    <div class="product-testimonial-content">
+                        "Sinds we de interactieve vloer hebben, is de gymles het favoriete vak geworden. Kinderen die normaal niet van bewegen houden, staan nu vooraan!"
+                    </div>
+                    <div class="product-testimonial-author">
+                        <div class="product-testimonial-avatar">JB</div>
+                        <div class="product-testimonial-info">
+                            <div class="product-testimonial-name">Jan Bakker</div>
+                            <div class="product-testimonial-role">Gymleraar, Basisschool Het Kompas</div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Technical Specifications -->
+        <section class="specs-table-section section-opaque-light">
+            <div class="container">
+                <h2 class="industrial-label" style="text-align: center; margin-bottom: 2rem;">Technische Specificaties</h2>
+                <table class="specs-table">
+                    <thead>
+                        <tr>
+                            <th>Specificatie</th>
+                            <th>Details</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="spec-label">Projectiegrootte</td>
+                            <td class="spec-value"><span class="spec-highlight">3 x 2,5 meter</span> (standaard)</td>
+                        </tr>
+                        <tr>
+                            <td class="spec-label">Montagehoogte</td>
+                            <td class="spec-value">2,8 - 4 meter plafond</td>
+                        </tr>
+                        <tr>
+                            <td class="spec-label">Aantal spellen</td>
+                            <td class="spec-value"><span class="spec-highlight">60+ spellen</span> inclusief</td>
+                        </tr>
+                        <tr>
+                            <td class="spec-label">Max. spelers</td>
+                            <td class="spec-value">4-6 tegelijkertijd</td>
+                        </tr>
+                        <tr>
+                            <td class="spec-label">Installatie</td>
+                            <td class="spec-value"><span class="spec-highlight">Plug & Play</span> - binnen 15 min</td>
+                        </tr>
+                        <tr>
+                            <td class="spec-label">Leeftijdsbereik</td>
+                            <td class="spec-value">3 - 100 jaar</td>
+                        </tr>
+                        <tr>
+                            <td class="spec-label">Updates</td>
+                            <td class="spec-value">Gratis automatische updates</td>
+                        </tr>
+                        <tr>
+                            <td class="spec-label">Garantie</td>
+                            <td class="spec-value"><span class="spec-highlight">2 jaar</span> volledige garantie</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
 
@@ -316,6 +446,20 @@
             <p>&copy; 2026 InterActiveMove B.V. Alle rechten voorbehouden.</p>
         </div>
     </footer>
+    <!-- Product Mobile Sticky CTA -->
+    <div class="product-sticky-cta">
+        <div class="cta-inner">
+            <div class="price-info">
+                <div class="price-label">Vanaf</div>
+                <div class="price-value">Op aanvraag</div>
+            </div>
+            <div class="cta-actions">
+                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20offerte%20voor%20de%20Interactieve%20Vloer."
+                   target="_blank" class="btn-cta-primary">Offerte</a>
+                <a href="tel:+31623998934" class="btn-cta-secondary">📞</a>
+            </div>
+        </div>
+    </div>
 </div>
 
     <script>
