Fix broken links, replace WhatsApp with email, add missing klimwand page
- Replace all wa.me/31623998934 WhatsApp links with mailto:info@interactivemove.nl
- Create missing products/interactieve-klimwand.html page (was 404)
- Create klimwand language partials (NL + EN)
- Fix social media footer links: Facebook, Instagram, YouTube (were all '#')
- All navigation links now resolve to existing pages

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <p style="text-align: center; color: #666; margin-bottom: 2rem;">Projectie op de grond die
                                 reageert
                                 op beweging. Perfect voor scholen en speelhallen.</p>
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Vloer."
+                            <a href="mailto:info@interactivemove.nl"
                                 target="_blank" class="btn"
                                 style="width: 100%; text-align: center; border-radius: 999px;">Meer
                                 info</a>
@@ -243,7 +243,7 @@
                             <p style="text-align: center; color: #666; margin-bottom: 2rem;">Wandprojectie voor sport,
                                 educatie
                                 en entertainment. Speel, leer en beweeg!</p>
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Muur."
+                            <a href="mailto:info@interactivemove.nl"
                                 target="_blank" class="btn btn-danger"
                                 style="width: 100%; text-align: center; border-radius: 999px;">Meer info</a>
                         </div>
@@ -260,7 +260,7 @@
                             <p style="text-align: center; color: #666; margin-bottom: 2rem;">Augmented reality zandbak
                                 met
                                 topografische projecties. Leren door spelen.</p>
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Zandbak."
+                            <a href="mailto:info@interactivemove.nl"
                                 target="_blank" class="btn"
                                 style="width: 100%; text-align: center; border-radius: 999px;">Meer
                                 info</a>
@@ -278,7 +278,7 @@
                             <p style="text-align: center; color: #666; margin-bottom: 2rem;">Klimmen wordt een game!
                                 Projectie
                                 op klimwanden voor extra uitdaging.</p>
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Klimwand."
+                            <a href="mailto:info@interactivemove.nl"
                                 target="_blank" class="btn"
                                 style="width: 100%; text-align: center; border-radius: 999px;">Meer
                                 info</a>
@@ -296,7 +296,7 @@
                             <p style="text-align: center; color: #666; margin-bottom: 2rem;">Verhuur voor evenementen.
                                 Wij
                                 verzorgen transport en installatie.</p>
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20de%20Mobiele%20Vloer%20huren."
+                            <a href="mailto:info@interactivemove.nl"
                                 target="_blank" class="btn"
                                 style="width: 100%; text-align: center; border-radius: 999px;">Offerte aanvragen</a>
                         </div>
@@ -313,7 +313,7 @@
                             <p style="text-align: center; color: #666; margin-bottom: 2rem;">Bouw uw eigen interactieve
                                 spellen
                                 met onze Game Editor en Animator tools.</p>
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20weten%20over%20maatwerk%20software."
+                            <a href="mailto:info@interactivemove.nl"
                                 target="_blank" class="btn"
                                 style="width: 100%; text-align: center; border-radius: 999px;">Meer
                                 info</a>
@@ -564,7 +564,7 @@
                     <h2 class="industrial-label">Klaar om Uw Ruimte te Transformeren?</h2>
                     <p class="subtitle">Plan een gratis adviesgesprek met onze experts</p>
                     <div class="final-cta-buttons">
-                        <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20adviesgesprek%20inplannen." target="_blank" class="cta-whatsapp">
+                        <a href="mailto:info@interactivemove.nl" target="_blank" class="cta-whatsapp">
                             <span class="cta-icon">💬</span>
                             <span class="cta-text">
                                 <strong>Direct Contact via WhatsApp</strong>
@@ -643,16 +643,16 @@
                     <img src="media/logo-final.png" alt="InterActiveMove" class="footer-logo">
                     <p class="footer-tagline">Beweeg, Leer en Speel met InterActiveMove</p>
                     <div class="footer-social">
-                        <a href="#" aria-label="Facebook"><svg width="24" height="24" fill="currentColor"
+                        <a href="https://www.facebook.com/interactivemove" target="_blank" aria-label="Facebook"><svg width="24" height="24" fill="currentColor"
                                 viewBox="0 0 24 24">
                                 <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z" />
                             </svg></a>
-                        <a href="#" aria-label="Twitter"><svg width="24" height="24" fill="currentColor"
+                        <a href="https://www.instagram.com/interactivemove" target="_blank" aria-label="Instagram"><svg width="24" height="24" fill="currentColor"
                                 viewBox="0 0 24 24">
                                 <path
                                     d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
                             </svg></a>
-                        <a href="#" aria-label="YouTube"><svg width="24" height="24" fill="currentColor"
+                        <a href="https://www.youtube.com/@interactivemove" target="_blank" aria-label="YouTube"><svg width="24" height="24" fill="currentColor"
                                 viewBox="0 0 24 24">
                                 <path
                                     d="M22.54 6.42a2.78 2.78 0 00-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 00-1.94 2A29 29 0 001 11.75a29 29 0 00.46 5.33A2.78 2.78 0 003.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 001.94-2 29 29 0 00.46-5.25 29 29 0 00-.46-5.33z" />
@@ -704,7 +704,7 @@
                 Vraag vrijblijvend advies
             </div>
             <div class="cta-buttons">
-                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie." target="_blank" class="btn-cta-primary">WhatsApp</a>
+                <a href="mailto:info@interactivemove.nl" target="_blank" class="btn-cta-primary">WhatsApp</a>
                 <a href="tel:+31623998934" class="btn-cta-secondary">📞</a>
             </div>
         </div>
@@ -721,7 +721,7 @@
             const details = form.querySelector('textarea[name="details"]').value;
 
             const text = `Hallo, ik ben ${name} van ${company} (${email}).\n\n${details}`;
-            const url = `https://wa.me/31623998934?text=${encodeURIComponent(text)}`;
+            const url = `mailto:info@interactivemove.nl
 
             window.open(url, '_blank');
         }
