--- a/products/interactieve-vloer.html
+++ b/products/interactieve-vloer.html
@@ -110,7 +110,7 @@
                             projectietechnologie reageert direct op beweging - ideaal voor scholen,
                             BSO's, zorginstellingen en evenementen.</p>
                         <div class="hero-cta-group" style="justify-content: flex-start; margin-top: 1.5rem;">
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Vloer."
+                            <a href="mailto:info@interactivemove.nl"
                                 class="btn-primary">
                                 Offerte Aanvragen
                             </a>
@@ -354,7 +354,7 @@
                     Vraag een vrijblijvende offerte aan of neem contact op voor meer informatie.
                 </p>
                 <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-                    <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Vloer."
+                    <a href="mailto:info@interactivemove.nl"
                         target="_blank" class="btn"
                         style="background: var(--color-primary); color: #000; border-radius: 999px; padding: 1rem 2.5rem;">
                         Offerte Aanvragen
@@ -393,16 +393,16 @@
                 <img src="../media/logo-final.png" alt="InterActiveMove" class="footer-logo">
                 <p class="footer-tagline">Beweeg, Leer en Speel met InterActiveMove</p>
                 <div class="footer-social">
-                    <a href="#" aria-label="Facebook"><svg width="24" height="24" fill="currentColor"
+                    <a href="https://www.facebook.com/interactivemove" target="_blank" aria-label="Facebook"><svg width="24" height="24" fill="currentColor"
                             viewBox="0 0 24 24">
                             <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z" />
                         </svg></a>
-                    <a href="#" aria-label="Twitter"><svg width="24" height="24" fill="currentColor"
+                    <a href="https://www.instagram.com/interactivemove" target="_blank" aria-label="Instagram"><svg width="24" height="24" fill="currentColor"
                             viewBox="0 0 24 24">
                             <path
                                 d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
                         </svg></a>
-                    <a href="#" aria-label="YouTube"><svg width="24" height="24" fill="currentColor"
+                    <a href="https://www.youtube.com/@interactivemove" target="_blank" aria-label="YouTube"><svg width="24" height="24" fill="currentColor"
                             viewBox="0 0 24 24">
                             <path
                                 d="M22.54 6.42a2.78 2.78 0 00-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 00-1.94 2A29 29 0 001 11.75a29 29 0 00.46 5.33A2.78 2.78 0 003.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 001.94-2 29 29 0 00.46-5.25 29 29 0 00-.46-5.33z" />
@@ -451,7 +451,7 @@
                 <div class="price-value">Op aanvraag</div>
             </div>
             <div class="cta-actions">
-                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20offerte%20voor%20de%20Interactieve%20Vloer."
+                <a href="mailto:info@interactivemove.nl"
                    target="_blank" class="btn-cta-primary">Offerte</a>
                 <a href="tel:+31623998934" class="btn-cta-secondary">📞</a>
             </div>
