--- a/products/mobiele-vloer.html
+++ b/products/mobiele-vloer.html
@@ -90,7 +90,7 @@
                             <li>Opbouw & Uitleg</li>
                             <li>Basisverzekering</li>
                         </ul>
-                        <a href="https://wa.me/31623998934?text=Reservering%20Zelf%20Ontdekken" target="_blank"
+                        <a href="mailto:info@interactivemove.nl" target="_blank"
                             class="btn" style="width: 100%; border-radius: 999px;">Reserveer</a>
                     </div>
                     <div class="pricing-card popular">
@@ -103,7 +103,7 @@
                             <li>Spelbegeleiding</li>
                             <li>Volledig verzorgd</li>
                         </ul>
-                        <a href="https://wa.me/31623998934?text=Reservering%20Met%20Begeleider" target="_blank"
+                        <a href="mailto:info@interactivemove.nl" target="_blank"
                             class="btn btn-danger" style="width: 100%; border-radius: 999px;">Reserveer</a>
                     </div>
                     <div class="pricing-card">
@@ -115,7 +115,7 @@
                             <li>Opbouw vrijdag</li>
                             <li>Afbouw maandag</li>
                         </ul>
-                        <a href="https://wa.me/31623998934?text=Reservering%20Weekendpakket" target="_blank" class="btn"
+                        <a href="mailto:info@interactivemove.nl" target="_blank" class="btn"
                             style="width: 100%; border-radius: 999px;">Reserveer</a>
                     </div>
                 </div>
@@ -129,16 +129,16 @@
                 <img src="../media/logo-final.png" alt="InterActiveMove" class="footer-logo">
                 <p class="footer-tagline">Beweeg, Leer en Speel met InterActiveMove</p>
                 <div class="footer-social">
-                    <a href="#" aria-label="Facebook"><svg width="24" height="24" fill="currentColor"
+                    <a href="https://www.facebook.com/interactivemove" target="_blank" aria-label="Facebook"><svg width="24" height="24" fill="currentColor"
                             viewBox="0 0 24 24">
                             <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z" />
                         </svg></a>
-                    <a href="#" aria-label="Twitter"><svg width="24" height="24" fill="currentColor"
+                    <a href="https://www.instagram.com/interactivemove" target="_blank" aria-label="Instagram"><svg width="24" height="24" fill="currentColor"
                             viewBox="0 0 24 24">
                             <path
                                 d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
                         </svg></a>
-                    <a href="#" aria-label="YouTube"><svg width="24" height="24" fill="currentColor"
+                    <a href="https://www.youtube.com/@interactivemove" target="_blank" aria-label="YouTube"><svg width="24" height="24" fill="currentColor"
                             viewBox="0 0 24 24">
                             <path
                                 d="M22.54 6.42a2.78 2.78 0 00-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 00-1.94 2A29 29 0 001 11.75a29 29 0 00.46 5.33A2.78 2.78 0 003.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 001.94-2 29 29 0 00.46-5.25 29 29 0 00-.46-5.33z" />
