--- a/products/interactieve-klimwand.html
+++ b/products/interactieve-klimwand.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactieve Zandbak | InterActiveMove</title>
+    <title>Interactieve Klimwand | InterActiveMove</title>
     <meta name="description"
-        content="De Interactieve Zandbak met augmented reality topografische projecties. Leren door spelen met zand en licht.">
+        content="De Interactieve Klimwand van IAM: wandprojectie voor sport, educatie en entertainment. Speel, leer en beweeg!">
     <link rel="icon" href="../media/icon.png" type="image/png">
     <link rel="stylesheet" href="../styles.css?v=1.3">
     <script src="/js/htmx.min.js"></script>
@@ -24,8 +24,8 @@
                     <button class="nav-link">Producten</button>
                     <div class="dropdown-menu">
                         <a href="interactieve-vloer.html">Interactieve Vloer</a>
-                        <a href="interactieve-muur.html">Interactieve Muur</a>
-                        <a href="interactieve-zandbak.html" class="active">Interactieve Zandbak</a>
+                        <a href="interactieve-klimwand.html" class="active">Interactieve Klimwand</a>
+                        <a href="interactieve-zandbak.html">Interactieve Zandbak</a>
                         <a href="interactieve-klimwand.html">Interactieve Klimwand</a>
                         <a href="mobiele-vloer.html">Mobiele Vloer</a>
                         <a href="software-maatwerk.html">Software & Maatwerk</a>
@@ -46,7 +46,7 @@
                 <li class="nav-item"><a href="../index.html#contact" class="nav-link">Contact</a></li>
             </ul>
             <div class="lang-toggle">
-                <button class="lang-btn active" hx-get="../partials/products/interactieve-zandbak-nl.html" hx-target="#page-wrapper" hx-swap="innerHTML" hx-push-url="?lang=nl">NL</button><span class="divider">|</span><button
+                <button class="lang-btn active" hx-get="../partials/products/interactieve-klimwand-nl.html" hx-target="#page-wrapper" hx-swap="innerHTML" hx-push-url="?lang=nl">NL</button><span class="divider">|</span><button
                     class="lang-btn">EN</button>
             </div>
             <button class="hamburger" onclick="toggleMobileNav()"
@@ -59,7 +59,7 @@
     <div class="mobile-nav" id="mobileNav">
         <a href="../index.html">Home</a>
         <a href="interactieve-vloer.html">Interactieve Vloer</a>
-        <a href="interactieve-muur.html">Interactieve Muur</a>
+        <a href="interactieve-klimwand.html">Interactieve Klimwand</a>
         <a href="interactieve-zandbak.html">Interactieve Zandbak</a>
         <a href="interactieve-klimwand.html">Interactieve Klimwand</a>
         <a href="mobiele-vloer.html">Mobiele Vloer</a>
@@ -77,26 +77,25 @@
     <main>
         <section class="hero" style="height: 60vh;">
             <div class="hero-video-container">
-                <img src="../media/products/interactieve-zandbak.png" alt="Interactieve Zandbak"
+                <img src="../media/hero_interactieve_klimwand.png" alt="Interactieve Klimwand Hero"
                     style="width: 100%; height: 100%; object-fit: cover; opacity: 0.9;">
             </div>
             <div class="hero-content">
-                <h1 class="industrial-label" style="text-shadow: 2px 2px 0 #000;">Interactieve Zandbak</h1>
-                <p style="font-size: 1.3rem; margin-bottom: 2rem; text-shadow: 1px 1px 0 #000;">Augmented reality
-                    zandbak met topografische projecties</p>
+                <h1 class="industrial-label" style="text-shadow: 2px 2px 0 #000;">Interactieve Klimwand</h1>
+                <p style="font-size: 1.3rem; margin-bottom: 2rem; text-shadow: 1px 1px 0 #000;">Wandprojectie voor
+                    sport, educatie en entertainment</p>
             </div>
         </section>
 
         <section class="section section-opaque-light">
             <div class="container">
                 <h2 class="industrial-label" style="text-align: center; margin-bottom: 2rem;">Wat is de Interactieve
-                    Zandbak?</h2>
+                    Muur?</h2>
                 <div style="max-width: 800px; margin: 0 auto; text-align: center;">
                     <p style="font-size: 1.1rem; line-height: 1.8; color: var(--color-text-muted);">
-                        De Interactieve Zandbak combineert echt zand met digitale projectie. Wanneer kinderen
-                        het zand verplaatsen, verandert de projectie in realtime: bergen krijgen sneeuw,
-                        dalen vullen zich met water, vulkanen barsten uit. Een unieke manier om aardrijkskunde
-                        en natuurkunde te ontdekken.
+                        De Interactieve Klimwand combineert klimmen met geprojecteerde games en uitdagingen. Klimmers raken doelen aan,
+                        volgen routes en spelen interactieve spellen terwijl ze klimmen. Perfect voor klimhallen, sportcentra, scholen
+                        en entertainmentlocaties.
                     </p>
                 </div>
             </div>
@@ -109,32 +108,34 @@
                     <div class="spec-card">
                         <svg class="spec-icon" fill="currentColor" viewBox="0 0 24 24">
                             <path
-                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93z" />
+                                d="M13.49 5.48c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zM9.8 8.9L7 23h2.1l1.8-8 2.1 2v6h2v-7.5l-2.1-2 .6-3C14.8 12 16.8 13 19 13v-2c-1.9 0-3.5-1-4.3-2.4l-1-1.6c-.4-.6-1-1-1.7-1-.3 0-.5.1-.8.1L6 8.3V13h2V9.6l1.8-.7z" />
                         </svg>
-                        <h3 class="spec-title">Topografie</h3>
-                        <p class="spec-desc">Realtime hoogtekaarten die reageren op zandverschuivingen.</p>
-                    </div>
-                    <div class="spec-card">
-                        <svg class="spec-icon" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M12 3L2 12h3v8h14v-8h3L12 3zm0 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2z" />
-                        </svg>
-                        <h3 class="spec-title">Vulkanen</h3>
-                        <p class="spec-desc">Maak een berg hoog genoeg en hij barst uit met lava-effecten.</p>
-                    </div>
-                    <div class="spec-card">
-                        <svg class="spec-icon" fill="currentColor" viewBox="0 0 24 24">
-                            <path
-                                d="M21.98 14H22h-.02zM5.35 13c1.19 0 1.42 1 3.33 1 1.95 0 2.09-1 3.33-1 1.19 0 1.42 1 3.33 1 1.95 0 2.09-1 3.33-1v2c-1.9 0-2.1 1-3.33 1-1.19 0-1.42-1-3.33-1-1.95 0-2.1 1-3.33 1-1.19 0-1.42-1-3.33-1-1.95 0-2.1 1-3.33 1v-2c1.9 0 2.1-1 3.33-1z" />
-                        </svg>
-                        <h3 class="spec-title">Water Simulatie</h3>
-                        <p class="spec-desc">Dalen vullen zich met water dat realistisch stroomt.</p>
+                        <h3 class="spec-title">Klim-Games</h3>
+                        <p class="spec-desc">Geprojecteerde doelen en routes op de klimwand voor een gamified klimervaring.
+                        </p>
                     </div>
                     <div class="spec-card">
                         <svg class="spec-icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z" />
                         </svg>
                         <h3 class="spec-title">Educatief</h3>
-                        <p class="spec-desc">Ideaal voor musea, scholen en educatieve centra.</p>
+                        <p class="spec-desc">Leer spelenderwijs met rekenen, taal en geheugenoefeningen.</p>
+                    </div>
+                    <div class="spec-card">
+                        <svg class="spec-icon" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14z" />
+                        </svg>
+                        <h3 class="spec-title">Elke Klimwand</h3>
+                        <p class="spec-desc">Werkt op vrijwel elke klimwand, zowel boulder- als touwklimwanden.</p>
+                    </div>
+                    <div class="spec-card">
+                        <svg class="spec-icon" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M19 3H5c-1.1 0-1.99.9-1.99 2L3 19c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-1 11h-4v4h-4v-4H6v-4h4V6h4v4h4v4z" />
+                        </svg>
+                        <h3 class="spec-title">Revalidatie</h3>
+                        <p class="spec-desc">Therapeutische oefeningen voor motoriek en cognitie.</p>
                     </div>
                 </div>
             </div>
@@ -168,9 +169,9 @@
                             style="width: 100%; border-radius: 999px;">Bekijk</a>
                     </div>
                     <div class="pricing-card" style="text-align: center;">
-                        <h3 class="pricing-title">Software & Maatwerk</h3>
-                        <p style="color: #666; margin-bottom: 1.5rem;">Op maat gemaakte oplossingen</p>
-                        <a href="software-maatwerk.html" class="btn"
+                        <h3 class="pricing-title">Interactieve Muur</h3>
+                        <p style="color: #666; margin-bottom: 1.5rem;">Wandprojectie voor sport en educatie</p>
+                        <a href="interactieve-muur.html" class="btn"
                             style="width: 100%; border-radius: 999px;">Bekijk</a>
                     </div>
                 </div>
@@ -214,7 +215,7 @@
                 <h4 class="footer-heading">Producten</h4>
                 <ul class="footer-links">
                     <li><a href="interactieve-vloer.html">Interactieve Vloer</a></li>
-                    <li><a href="interactieve-muur.html">Interactieve Muur</a></li>
+                    <li><a href="interactieve-klimwand.html">Interactieve Klimwand</a></li>
                     <li><a href="interactieve-zandbak.html">Interactieve Zandbak</a></li>
                     <li><a href="interactieve-klimwand.html">Interactieve Klimwand</a></li>
                 </ul>
@@ -248,7 +249,7 @@
             const params = new URLSearchParams(window.location.search);
             const lang = params.get('lang');
             if (lang === 'en') {
-                htmx.ajax('GET', '../partials/products/interactieve-zandbak-en.html', '#page-wrapper');
+                htmx.ajax('GET', '../partials/products/interactieve-klimwand-en.html', '#page-wrapper');
             }
         });
     </script>
